--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ subjects:
 - !lcc 'PS'
 - !lcsh 'New York (N.Y.) -- Fiction'
 - !lcsh 'Québec (Province) -- Fiction'
+- GITenberg
 title: A Cry in the Wilderness
 url: http://www.gutenberg.org/ebooks/34396
